--- a/wwwroot/css/Estilos.css
+++ b/wwwroot/css/Estilos.css
@@ -77,15 +77,15 @@
   border-radius: 30px;
   margin: 2px 0 0 2px;
   padding: 4px 25px 4px 25px;
-  border: 3px solid #EDC751;
+  border: 1px solid #bd1714;
   text-align: center;
   
   }
   
   .get-started a:hover, .button button:hover, .get-started input:hover{
   
-  background: #EDC751;
-  color: #213B52;
+  background: #bd1714;
+  color:white;
   text-decoration: none;
   
   }
@@ -105,6 +105,7 @@
   @media(min-width:768px)
   {
     .formulario{
+        background-color:#e9e9e9;
         margin: auto;
         width: 500px;
         margin-top: 150px;
@@ -118,7 +119,7 @@
   }
   
   .section-bg {
-    background: linear-gradient(180deg, #f6f2fa 0%, #fff 100%);
+    background: linear-gradient(180deg, #ffffff 0%, #fff 100%);
   }
   
   .section-title {
