--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,44 +2,38 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Iniciar Sesion";
 }
 
 <section id="catalogue" class="catalogue section-bg">
-<div class="row">
-        
-            <form class ="formulario" id="account" method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                
-                <h1>Inicie Sesión</h1>
+    <div class="row">
+        <form class ="formulario" id="account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+                <h1>@ViewData["Title"]</h1>
                 <hr>
                 <div class="container"> 
-                <div class="form-group formM">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group formM">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
+                    <div class="form-group formM">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group formM">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="Input.RememberMe">
                             <input asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                            </label>
+                        </div>
                     </div>
-                </div>
-
-                <div class="get-started" style="text-align: center;">
-               <input type="submit" value="Iniciar Sesión" class="button">    
-         </div>
-                    <p>Da click en Iniciar Sesión para logearte a nuestra pagina web</p>
-                    <p>¿No tienes una cuenta? <a class="link" asp-page="./Register">Registrate </a></p>
-                </div>
-            </form>
+                    <div class="get-started" style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+                        <input type="submit" value="Iniciar Sesión" class="button">    
+                    
+        </form>
         </div>
     </div>
 </section>
