--- a/wwwroot/css/Estilos.css
+++ b/wwwroot/css/Estilos.css
@@ -1,8 +1,3 @@
-.formulario{
-    background: #fff;
-    margin-top: 80px;
-    padding: 3px;
-  }
   @media(min-width:768px)
 {
   .formulario{
@@ -43,7 +38,7 @@
     padding: 15px;
   }
   .formulario{
-    background: #fff;
+    background: #e9e9e9;
     margin-top: 150px;
     padding: 3px;
   }
@@ -105,7 +100,6 @@
   @media(min-width:768px)
   {
     .formulario{
-        background-color:#e9e9e9;
         margin: auto;
         width: 500px;
         margin-top: 150px;
