--- a/Views/Formulario/Index2.cshtml
+++ b/Views/Formulario/Index2.cshtml
@@ -1,100 +1,40 @@
-@model FORMULARIOCENSI.Models.Formulario;
+@model IEnumerable<FORMULARIOCENSI.Models.Formulario>
 @{
     ViewData["Title"] = "Formulario";
 }
-
-<div class="text-center">
-    <h1>@ViewData["Title"]</h1>
-</div>
-
-<div class="text-left">
-    <h1 class="display-4"></h1>
-
-    <form asp-controller="Formulario" asp-action="Create">
-        <div class="text-left">
-            <label asp-for="Sinopsis" class="control-label"></label>
-            <input asp-for="Sinopsis" class="form-control"/>
+<section id="catalogue" class="catalogue section-bg">
+    <div class="container">
+        <div class="section-title">
+            <h2 data-aos="fade-in">CASOS</h2>
         </div>
 
-        <div class="text-left">
-            <label asp-for="Autores" class="control-label"></label>
-            <input asp-for="Autores" class="form-control"/>
-        </div>
+        <p>
+            <a class="btn btn-primary" asp-action="Create">Crear nuevo</a>
+        </p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Sinopsis)
+                    </th>
 
-        <div class="text-left">
-            <label asp-for="HistoriaClinica" class="control-label"></label>
-            <input asp-for="HistoriaClinica" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="NotaIngreso" class="control-label"></label>
-            <input asp-for="NotaIngreso" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Ordenes" class="control-label"></label>
-            <input asp-for="Ordenes" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Objetivos" class="control-label"></label>
-            <input asp-for="Objetivos" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Desempeño" class="control-label"></label>
-            <input asp-for="Desempeño" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Preguntas" class="control-label"></label>
-            <input asp-for="Preguntas" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Equipos" class="control-label"></label>
-            <input asp-for="Equipos" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Guión" class="control-label"></label>
-            <textarea asp-for="Guión" class="form-control" cols="30" rows="10"></textarea>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Confederado" class="control-label"></label>
-            <input asp-for="Confederado" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="NotasFacilitador" class="control-label"></label>
-            <textarea asp-for="NotasFacilitador" class="form-control" cols="30" rows="10"></textarea>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="PuntosDebriefing" class="control-label"></label>
-            <input asp-for="PuntosDebriefing" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Aprendizaje" class="control-label"></label>
-            <input asp-for="Aprendizaje" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Referencias" class="control-label"></label>
-            <input asp-for="Referencias" class="form-control"/>
-        </div>
-
-        <div class="text-left">
-            <label asp-for="Escenarios" class="control-label"></label>
-            <textarea asp-for="Escenarios" class="form-control" cols="30" rows="10"></textarea>
-        </div>
-
-        <h1></h1>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </div>
-    </form>
-    <h1>@ViewData["Message"]</h1>
-</div>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Modificar</a>
+                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                        </td>
+                        <td style="width: 1000px;">
+                            @Html.DisplayFor(modelItem => item.Sinopsis)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
