Modificando cuenta administrador

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -4,122 +4,35 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<section id="catalogue" class="catalogue section-bg">
+    <div class="container">
+        <div class="section-title">
+            <h2 data-aos="fade-in">CASOS REGISTRADOS</h2>
+        </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Sinopsis)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Autores)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HistoriaClinica)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NotaIngreso)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ordenes)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Objetivos)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Desempeño)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Preguntas)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Equipos)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Guión)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Confederado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NotasFacilitador)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PuntosDebriefing)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Aprendizaje)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Referencias)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Escenarios)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sinopsis)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Autores)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HistoriaClinica)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NotaIngreso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ordenes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Objetivos)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Desempeño)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Preguntas)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Equipos)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Guión)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Confederado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NotasFacilitador)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PuntosDebriefing)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Aprendizaje)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Referencias)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Escenarios)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Sinopsis)
+                    </th>
+                    <th></th> <!-- Columna vacía para los botones -->
+                </tr>
+            </thead>
+            <tbody>
+            @foreach (var item in Model) {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Sinopsis)
+                    </td>
+                    <td class="text-right d-flex justify-content-end"> <!-- Flexbox para alineación -->
+                        <a class="btn btn-primary mx-1" asp-action="Edit" asp-route-id="@item.Id">Modificar</a>
+                        <a class="btn btn-success mx-1" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
+                        <a class="btn btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
+</section>
