--- a/Views/Admin/Delete.cshtml
+++ b/Views/Admin/Delete.cshtml
@@ -12,6 +12,9 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Titulo)
+        </dt>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Sinopsis)
         </dt>
         <dd class = "col-sm-10">
