--- a/Views/Admin/Create.cshtml
+++ b/Views/Admin/Create.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Titulo" class="control-label"></label>
+                <input asp-for="Titulo" class="form-control" />
+                <span asp-validation-for="Titulo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Sinopsis" class="control-label"></label>
                 <input asp-for="Sinopsis" class="form-control" />
                 <span asp-validation-for="Sinopsis" class="text-danger"></span>
