--- a/Views/Admin/Details.cshtml
+++ b/Views/Admin/Details.cshtml
@@ -10,100 +10,103 @@
     <h4>Formulario</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
+            @Html.DisplayNameFor(model => model.Titulo)
+        </dt>
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Sinopsis)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Sinopsis)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Autores)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Autores)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.HistoriaClinica)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.HistoriaClinica)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.NotaIngreso)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.NotaIngreso)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Ordenes)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Ordenes)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Objetivos)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Objetivos)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Desempeño)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Desempeño)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Preguntas)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Preguntas)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Equipos)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Equipos)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Guión)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Guión)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Confederado)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Confederado)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.NotasFacilitador)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.NotasFacilitador)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.PuntosDebriefing)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.PuntosDebriefing)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Aprendizaje)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Aprendizaje)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Referencias)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Referencias)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-12">
             @Html.DisplayNameFor(model => model.Escenarios)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-12">
             @Html.DisplayFor(model => model.Escenarios)
         </dd>
     </dl>
