--- a/Views/Formulario/Create.cshtml
+++ b/Views/Formulario/Create.cshtml
@@ -12,8 +12,12 @@
 
     <form asp-controller="Formulario" asp-action="Create">
         <div class="text-left">
+            <label asp-for="Titulo" class="control-label"></label>
+            <input asp-for="Titulo" class="form-control"/>
+        </div>
+        <div class="text-left">
             <label asp-for="Sinopsis" class="control-label"></label>
-            <input asp-for="Sinopsis" class="form-control"/>
+            <textarea asp-for="Sinopsis" class="form-control" cols="30" rows="10"></textarea>
         </div>
 
         <div class="text-left">
